Fix overflow-x scroll in the sidebar

--- a/app/style/SideBar.less
+++ b/app/style/SideBar.less
@@ -35,6 +35,7 @@
 .sidebar-scroll {
   position: relative;
   overflow-y: auto;
+  overflow-x: hidden;
   flex: 1;
 }
 
